<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/groovy"
        android:gravity="center_horizontal"
        android:text="Login to Cynance"
        android:textColor="#fc0303"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="Username: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edt"
        app:layout_constraintEnd_toStartOf="@+id/login_username_edt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"></TextView>


    <EditText
        android:id="@+id/login_username_edt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittext_border"
        android:hint="Enter Username Here"
        android:padding="10dp"

        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="372dp"

        android:text="Password: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_password_edt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/edittext_border"
        android:hint="Enter Password Here"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"></EditText>


    <Button
        android:id="@+id/login_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/gold"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/login_signup_btn"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Button
        android:id="@+id/login_signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/gold"
        android:text="Signup"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_login_btn"></Button>


    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardnal"
        android:text="TEMP"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edt"
        app:layout_constraintVertical_bias="0.694" />


</androidx.constraintlayout.widget.ConstraintLayout>