<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/logoID"
            android:layout_width="800dp"
            android:layout_height="600dp"
            android:cropToPadding="true"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/cynance_logo"/>

        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Login"
            android:textSize="25sp"

            android:backgroundTint="@color/gold"
            android:textColor="#ffffff"
            />

        <Button
            android:id="@+id/main_signup_btn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="Signup"

            android:textSize="25sp"
            android:backgroundTint="@color/gold"
            android:textColor="#ffffff"
            />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
