...

    <TextView
        android:id="@+id/WelcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="Welcome back,"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/BalanceTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
...
        android:text="exBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BalanceTxt" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:background="@drawable/round_edge_button"
        android:contentDescription="Profile Button"
        android:src="@drawable/baseline_person_24"
...
